k8s/nextcloud/0nextcloud-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: service-nextcloud
  labels:
    name: service-nextcloud
