k8s/nextcloud/nextcloud-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: service-nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-db-pod
    spec:
      containers:
        - name: mariadb
          image: linuxserver/mariadb
          volumeMounts:
            - name: db-storage
              mountPath: /config
              subPath: mysql-data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: nextcloud-db-storage-claim
