k8s/nextcloud/nextcloud-redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  namespace: service-nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-redis-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-redis-pod
    spec:
      containers:
        - name: redis
          image: redis:alpine
