k8s/nextcloud/nextcloud-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: service-nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-db-pod
  ports:
  - protocol: TCP
    port: 3306
