k8s/nextcloud/nextcloud-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: service-nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-redis-pod
  ports:
  - protocol: TCP
    port: 6379
