k8s/nextcloud/nextcloud-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-server
  namespace: service-nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-server-pod
  ports:
  - protocol: TCP
    port: 80
